--- a/titlepages/appendices.tex
+++ b/titlepages/appendices.tex
@@ -1,16 +1,25 @@
 \addcontentsline{toc}{section}{Appendices}
 \section*{Appendices}
 
-To be found within digital attachment:
+To be found within the digital attachment:
 
 \subsection*{Appendix A}
+
+\textit{/appendices/InformationPrivacyPractices.xlsx}
+
+InformationPrivacyPractices.xlsx contains the list of all information privacy risks and their assessment wether each information privacy practice expresses an information privacy risk to the users of \mH apps or not.
+The review was conducted by two researchers. 
+This document is the result of the discussion of the two researchers regarding which information privacy practice bears an information privacy risk.
+Furthermore the document evaluates which of the risk bearing information privacy practices can be detected via static code analysis and which are impossible to detect, technically.
+
+\subsection*{Appendix B}
 
 \textit{/appendices/Results.xlsx}
 
 A list of the found/not-found results of information privacy risks per information privacy practice, detected by the coherent \AIPRAT strategies.
 The table includes summerizations of the occurance of each strategy result and the total number of found strategy results per inspected app.
 
-\subsection*{Appendix B}
+\subsection*{Appendix C}
 
 \textit{/appendices/ResearcherReview.xlsx}
 
