after peters review

--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,8 @@
 	pdfauthor={Thomas Brüggemann}, % Author(s)
 	pdfkeywords={Master, Thesis, Master Thesis, M.Sc., M. Sc., Information Systems, IS, Wirtschaftsinformatik, University, Universität, Köln, Universität zu Köln, University of Cologne, Android, mHealth, Code, Analysis, Privacy, Risks}, % Keywords
 	colorlinks=false,
-	breaklinks=true
+	breaklinks=true,
+	hyperfootnotes=false
 ]{hyperref}
 \definecolor{mygreen}{rgb}{0,0.6,0}
 \definecolor{mygray}{rgb}{0.5,0.5,0.5}
